# anyrun

./: Cargo.toml
plugins/applications/src/: lib.rs  scrubber.rs
