[workspace]
members = [
  "anyrun",
  "anyrun-plugin",
  "anyrun-macros",
  "anyrun-interface",
  "plugins/applications",
  "plugins/symbols",
  "plugins/rink",
  "plugins/shell",
  "plugins/kidex",
  "plugins/translate",
  "plugins/randr",
  "plugins/stdin",
  "plugins/dictionary",
  "plugins/websearch",
]


[profile.release]
# opt-level = 'z'
lto = true
codegen-units = 1
panic = 'abort'
strip = true
